--- a/src/components/PlantCard.css
+++ b/src/components/PlantCard.css
@@ -13,6 +13,7 @@
 
 .img-box {
     position: relative;
+    text-align: center;
 
 }
 
@@ -21,10 +22,44 @@
     color: #FFFFFF;
     background-image: url(../img/discount-bg.svg);
     background-position: center;
+    background-repeat: no-repeat;
     width: 64px;
     height: 64px;
     right:0;
     top: 0;
     font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 
+}
+
+.card-text {
+    margin: 16px 0;
+}
+
+.plant-title{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.5;
+
+}
+
+.plant-price, .discounted-price {
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.plant-img {
+    width: auto;
+    max-height: 219px;
+    border-radius: 8px;
+}
+
+.red-price{
+    font-size: 16px;
+    color: var(--red);
+    text-decoration-line: line-through;
+    padding-left: 10px;
 }
