single page products

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,17 @@
   font-style: normal;
 }
 
+.container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-
+.example {
+  font-weight: 600;
+  font-family: "Poppins", 'serif';
+  font-size: 48px;
+  text-align: center;
+}
 
